# vision-single-arm-teleop

./: .gitignore  README.md  requirements.txt  vision_dual_arm_teleop_commands.txt
docs/: gazebo_install.md  gazebo_simulation.md  github_setup.md  publishing_demo.md  simulation_choice.md  version_1.html  version_1.md
gazebo/: README.md
gazebo/worlds/: pick_place.sdf
ros2_ws/: source_ws.bash
ros2_ws/src/vdat_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/vdat_gazebo/config/: initial_positions.yaml  panda_gazebo_controllers.yaml
ros2_ws/src/vdat_gazebo/launch/: panda_pick_place.launch.py
ros2_ws/src/vdat_gazebo/urdf/: panda_gazebo.ros2_control.xacro  panda_gazebo.urdf.xacro
ros2_ws/src/vdat_gazebo/worlds/: pick_place.sdf
ros2_ws/src/vdat_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/vdat_teleop/hook/: ament_prefix_path.ps1
ros2_ws/src/vdat_teleop/launch/: debug_perception.launch.py  demo_pick_place.launch.py  demo_pick_place_gazebo.launch.py
ros2_ws/src/vdat_teleop/vdat_teleop/: demo_manipulation_object_node.py  gripper_relay_node.py  scene_camera_viewer_node.py  scene_objects_node.py  servo_twist_relay_node.py  virtual_ee_simulator_node.py  webcam_teleop_node.py
scripts/: generate_version_1_pdf.py  install_gazebo.sh  list_cameras.py  run_hand_tracking.py  trim_video.sh
videos/: README.md
vision_dual_arm_teleop/mapping/: hand_to_twist.py
vision_dual_arm_teleop/recording/: demo_recorder.py
vision_dual_arm_teleop/tracking/: gesture_detector.py  hand_tracker.py
