<?xml version="1.0"?>
<package format="3">
  <name>vdat_teleop</name>
  <version>0.0.1</version>
  <description>Vision-based teleoperation publisher for robot arm control.</description>
  <maintainer email="sghogare1498@gmail.com">Shubham Ghogare</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
