<?xml version="1.0"?>
<package format="3">
  <name>vdat_teleop</name>
  <version>0.0.1</version>
  <description>Vision-based teleoperation package for Panda MoveIt Servo demos.</description>

  <maintainer email="shubham.ghogare14@gmail.com">Shubham Ghogare</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-opencv</exec_depend>

  <exec_depend>vdat_gazebo</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>